chore(ci): use Node.js version `lts/*` instead of `18`

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: lts/*
           registry-url: https://registry.npmjs.com
       # Step III
       - name: Install Dependencies
@@ -42,4 +42,5 @@ jobs:
         with:
           prerelease: false
           files: ./*
+
 # Authored by @kuohuanhuan.
