--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "prettier --write ./**/*.js",
     "bump": "bumpp"
   },
-  "devDependencies": {
+  "peerDependencies": {
     "bumpp": "^9.0.0",
     "postcss-scss": "^4.0.6",
     "prettier": "2.8.4",
